--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "com.fofx.observething": "file:C:/Users/epjec/Documents/ObserveThing/Core",
-    "com.fofx.observething.statefulextensions": "file:C:/Users/epjec/Documents/ObserveThing/StatefulExtensions",
+    "com.fofx.observething": "https://github.com/outernet-foundation/ObserveThing.git?path=Core",
+    "com.fofx.observething.statefulextensions": "https://github.com/outernet-foundation/ObserveThing.git?path=StatefulExtensions",
     "com.fofx.stateful": "https://github.com/epjecha/StatefulUnity.git?path=Assets/Package",
     "com.unity.ai.navigation": "2.0.8",
     "com.unity.collab-proxy": "2.10.0",
