--- a/Assets/Package/Core/package.json
+++ b/Assets/Package/Core/package.json
@@ -15,7 +15,7 @@
     {
       "displayName": "UI Primitives",
       "description": "Contains sample UI primitives",
-      "path": "Samples~/UI Primitives"
+      "path": "Samples/UI Primitives"
     }
   ]
 }
